src/test/resources/invalid/semanticErr/extra/array/compareArrays.wacc
begin

int[] arr = [1,2];
int[] brr = [1,3];
println arr > brr;
println arr < brr;
println arr <= brr;
println arr >= brr

end